perf: evitar N+1 en listado de clases (JOIN FETCH room/venue + conteo masivo de inscripciones)